--- a/products.html
+++ b/products.html
@@ -89,7 +89,7 @@
     </section>
 
   <footer class="bg-dark text-white text-center py-3">
-    <p>&copy; 2023 StarBeam</p>
+    <p>&copy; 2023 StarBeamLLC</p>
     <div>
       
         <a href="https://www.instagram.com/starbeameventplanners/" class="text-white">
