--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </div>
 
    <footer class="bg-dark text-white text-center py-3">
-    <p>&copy; 2023 StarBeam</p>
+    <p>&copy; 2023 StarBeamLLC</p>
     <div>
       
         <a href="https://www.instagram.com/starbeameventplanners/" class="text-white">
