--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
    <footer class="bg-dark text-white text-center py-3">
     <p>&copy; 2023 StarBeamLLC</p>
     <div>
-      
+        <p>Contact Us:</p>
         <a href="https://www.instagram.com/starbeameventplanners/" class="text-white">
             <img src="images/INS.jpg" alt="Instagram" width="24" height="24">
         </a> 
